release/1.16.1/VERSION.md
# 1.16.1

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.16.1```   |
| Release Time   | ```2020-06-24T10:31:40+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.16```   |
| sha1   | ```f3c4aa96e12951cd2781b3e1c0e8ab82bf719cf2```   |
| size   | ```295227```   |
| total size  | ```334438503```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/f3c4aa96e12951cd2781b3e1c0e8ab82bf719cf2/1.16.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```c9abbe8ee4fa490751ca70635340b7cf00db83ff```   |
| size   | ```17492432```   |
| url       | ```https://piston-data.mojang.com/v1/objects/c9abbe8ee4fa490751ca70635340b7cf00db83ff/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```a412fd69db1f81db3f511c1463fd304675244077```   |
| size   | ```37968964```   |
| url       | ```https://piston-data.mojang.com/v1/objects/a412fd69db1f81db3f511c1463fd304675244077/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |